--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "parsa.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -p .",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -23,5 +24,11 @@
   "bugs": {
     "url": "https://github.com/jaakkohurtta/ParsaJS/issues"
   },
-  "homepage": "https://github.com/jaakkohurtta/ParsaJS#readme"
+  "homepage": "https://github.com/jaakkohurtta/ParsaJS#readme",
+  "devDependencies": {
+    "@types/jest": "^27.0.2",
+    "jest": "^27.2.4",
+    "ts-jest": "^27.0.5",
+    "typescript": "^4.4.3"
+  }
 }
