--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -8,15 +8,6 @@ on:
     types: [created]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v2
-        with:
-          node-version: 12
-      - run: npm ci
-
   publish-npm:
     needs: build
     runs-on: ubuntu-latest
@@ -27,6 +18,7 @@ jobs:
           node-version: 12
           registry-url: https://registry.npmjs.org/
       - run: npm ci
+      - run: npm run test
       - run: npm publish --access public
         env:
           NODE_AUTH_TOKEN: ${{secrets.PUBLISH_NPM_TOKEN}}
@@ -45,6 +37,7 @@ jobs:
           registry-url: https://npm.pkg.github.com/
           scope: '@jaakkohurtta'
       - run: npm ci
+      - run: npm run test
       - run: echo registry=https://npm.pkg.github.com/jaakkohurtta >> .npmrc
       - run: npm publish
         env:
